[package]
name = "stable-swap-placeholder"
version = "1.2.0"
description = "Placeholder for loading and logging a Stable-Swap account on-chain"
license = "Apache-2.0"
authors = ["david <dshaw002@gmail.com>"]
edition = "2018"

[dependencies]
arrayref = "0.3.6"
solana-program = "=1.7.8"
stable-swap-client = { path = "../stable-swap-client", version = "1.0.0" }
thiserror = "1.0.35"

[features]
test-bpf = []
exclude_entrypoint = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-sdk = "=1.7.8"
solana-validator = "=1.7.8"

[lib]
crate-type = ["cdylib", "lib"]